@@ -28,7 +28,6 @@
 #include <interfaces/chunkdownloadinterface.h>
 #include <util/functions.h>
 #include <util/log.h>
-#include <util/itemselectionmodel.h>
 #include "chunkdownloadmodel.h"
 
 using namespace bt;
@@ -40,12 +39,14 @@ namespace kt
 	ChunkDownloadView::ChunkDownloadView(QWidget* parent) : QWidget(parent),curr_tc(0)
 	{
 		setupUi(this);
-		model = new ChunkDownloadModel(this);
-		ItemSelectionModel* sm = new ItemSelectionModel(model,this);
-		m_chunk_view->setModel(model);
-		m_chunk_view->setSelectionModel(sm);
-		connect(model,SIGNAL(sorted()),sm,SLOT(sorted()));
 		
+		model = new ChunkDownloadModel(this);
+		pm = new QSortFilterProxyModel(this);
+		pm->setSourceModel(model);
+		pm->setDynamicSortFilter(true);
+		pm->setSortRole(Qt::UserRole);
+		
+		m_chunk_view->setModel(pm);
 		m_chunk_view->setRootIsDecorated(false);
 		m_chunk_view->setSortingEnabled(true);
 		m_chunk_view->setAlternatingRowColors(true);
